# kalfizs-major-image

./: .env.example  .gitignore  README.md  pyproject.toml
config/: kalfiz-major-image.env.sample
docs/: implementation.md  plan.md  roadmap.md
scripts/: boot_mode.sh  install_pi.sh  setup_mdns.sh  start_app.sh  start_kiosk.sh  start_provision_hotspot.sh  start_provision_kiosk.sh
src/kalfiz_major_image/: __init__.py  app.py  config.py  display_state.py  media.py  models.py
src/kalfiz_major_image/static/: app.css  control.js  display.js
src/kalfiz_major_image/templates/: base.html  control.html  display.html  provision.html
systemd/: kalfiz-app.service  kalfiz-boot.service  kalfiz-kiosk.service  kalfiz-provision-hotspot.service  kalfiz-provision-kiosk.service
tests/: test_app.py
