[project]
name = "kalfiz-major-image"
version = "0.1.0"
description = "Local-first Raspberry Pi battlemap display and media manager."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
kalfiz-major-image = "kalfiz_major_image.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
